--- a/server/pom.xml
+++ b/server/pom.xml
@@ -99,6 +99,7 @@
       <plugin> <!-- QueryDSL插件，用于在build过程中生成类型安全的JPA查询用Java Bean -->
         <groupId>com.mysema.maven</groupId>
         <artifactId>apt-maven-plugin</artifactId>
+        <version>1.1.3</version>
         <executions>
           <execution>
             <goals>
