--- a/server/Dockerfile.release
+++ b/server/Dockerfile.release
@@ -1,3 +1,26 @@
+# 
+#  MIT License
+# 
+#  Copyright (c) 2020 engineer365.org
+# 
+#  Permission is hereby granted, free of charge, to any person obtaining a copy
+#  of this software and associated documentation files (the "Software"), to deal
+#  in the Software without restriction, including without limitation the rights
+#  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+#  copies of the Software, and to permit persons to whom the Software is
+#  furnished to do so, subject to the following conditions:
+# 
+#  The above copyright notice and this permission notice shall be included in all
+#  copies or substantial portions of the Software.
+# 
+#  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+#  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+#  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+#  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+#  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+#  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+#  SOFTWARE.
+
 # 非开发环境使用的Dockerfile
 #
 # 和开发环境的主要区别在于：
@@ -37,7 +60,7 @@ FROM openjdk:11.0.9.1-jre
 WORKDIR /opt
 EXPOSE 8080
 
-COPY --from=builder /workspace/app/target/*.jar ./app.jar
+COPY --from=builder /workspace/app/target/*.jar ./server.jar
 
 ENV SPRING_PROFILES_ACTIVE production
 
@@ -47,5 +70,5 @@ CMD [\
     "java", \
     "-Dspring.profiles.active=${SPRING_PROFILES_ACTIVE}", \
     "-Djava.security.egd=file:/dev/./urandom", \
-    "-jar", "app.jar" \
+    "-jar", "server.jar" \
 ]
