--- a/server/dev/docker-compose.yml
+++ b/server/dev/docker-compose.yml
@@ -21,27 +21,34 @@
 #  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 #  SOFTWARE.
 
-# 开发环境使用的Dockerfile
-#
-# 和非开发环境的主要区别在于：
-# 1）依赖于宿主机做构建而容器内不做构建，直接从宿主机复制构建好的jar文件，开发迭代快速
-# 2）构建出的容器使用完整的openjdk镜像，并可加入一些开发工具，开发时更方便
+version: '2.2'
 
-# 1. stage: build --------------------------------------------------------------
-FROM openjdk:11.0.9.1-jdk
 
-WORKDIR /opt
-EXPOSE 8080
+networks:
+  default:
 
-COPY target/*.jar ./server.jar
 
-ENV SPRING_PROFILES_ACTIVE dev
+services:
 
-ENTRYPOINT []
+  mysql:
+    container_name: mysql.fleashop
+    extends:
+      file: ./docker-compose.base.yml
+      service: mysql
+    networks:
+      default:
+        aliases:
+          - mysql.fleashop.engineer365.org
 
-CMD [\
-    "java", \
-    "-Dspring.profiles.active=${SPRING_PROFILES_ACTIVE}", \
-    "-Djava.security.egd=file:/dev/./urandom", \
-    "-jar", "server.jar" \
-]
+  server:
+    container_name: server.fleashop
+    extends:
+      file:   ./docker-compose.base.yml
+      service: server
+    networks:
+      default:
+        aliases:
+          - server.fleashop.engineer365.org
+    depends_on:
+      mysql:
+        condition: service_healthy
