--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -20,28 +20,21 @@
 #  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 #  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 #  SOFTWARE.
+spring.application.name: fleashop
 
-# 开发环境使用的Dockerfile
-#
-# 和非开发环境的主要区别在于：
-# 1）依赖于宿主机做构建而容器内不做构建，直接从宿主机复制构建好的jar文件，开发迭代快速
-# 2）构建出的容器使用完整的openjdk镜像，并可加入一些开发工具，开发时更方便
+spring.profiles.include:
+  - common
 
-# 1. stage: build --------------------------------------------------------------
-FROM openjdk:11.0.9.1-jdk
+org.engineer365.platform:
+  user:
+    api:
+      host:
+        internal: ${ENGINEER365_PLATFORM_USER_API_HOST_INTERNAL:http://fleashop.engineer365.org}
+        external: ${ENGINEER365_PLATFORM_USER_API_HOST_EXTERNAL:https://fleashop.engineer365.org}
 
-WORKDIR /opt
-EXPOSE 8080
-
-COPY target/*.jar ./server.jar
-
-ENV SPRING_PROFILES_ACTIVE dev
-
-ENTRYPOINT []
-
-CMD [\
-    "java", \
-    "-Dspring.profiles.active=${SPRING_PROFILES_ACTIVE}", \
-    "-Djava.security.egd=file:/dev/./urandom", \
-    "-jar", "server.jar" \
-]
+service:
+  rdbms:
+    url: jdbc:mysql://${MYSQL_HOST:mysql.fleashop.engineer365.org}:${MYSQL_PORT:3306}/${MYSQL_DATABASE:fleashop}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+    database: ${MYSQL_DATABASE:fleashop}
+    username: ${MYSQL_USER:fleashop_user}
+    password: ${MYSQL_PASSWORD:fleashop_password}
