--- a/server/src/main/resources/application-common.yml
+++ b/server/src/main/resources/application-common.yml
@@ -35,6 +35,8 @@ logging:
       - org.engineer365
   level:
     root: INFO
+  file:
+    path: ~/data/fleashop-logs/java
 
 management:
   endpoints:
