第1个集成测试用例和相关支持代码 (#16)
* 弃用lombok chain Accessor，因为会导致cglib BeanCopier识别不出setter

* 试试怎么protect branch，避免前一个push那样误操作了却成功

* 第一个集成测试case

* 把测试用到的一些辅助代码（非测试案例本身）集中到org.engineer365.test里

* 用class表示所在需要scan的package，避免package名字的hardcode

* 删除无用的UserAppTest

* 重构DAO测试

* 运行集成测试前清空MySQL表

* 给集成测试范例加上一些注释

* 添加一个TODO

* 关于集成测试方案的简单说明（注释）

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -15,6 +15,7 @@
 
   <properties>
     <java.version>11</java.version>
+    <testcontainers.version>1.15.0</testcontainers.version>
   </properties>
 
   <dependencies>
@@ -41,6 +42,26 @@
     <dependency>
       <groupId>com.querydsl</groupId>
       <artifactId>querydsl-jpa</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>io.rest-assured</groupId>
+      <artifactId>rest-assured</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>io.rest-assured</groupId>
+      <artifactId>json-path</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>io.rest-assured</groupId>
+      <artifactId>xml-path</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>io.rest-assured</groupId>
+      <artifactId>json-schema-validator</artifactId>
     </dependency>
 
     <dependency>
@@ -92,6 +113,29 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
+
+    <!-- https://www.testcontainers.org/ -->
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>testcontainers</artifactId>
+      <version>${testcontainers.version}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>${testcontainers.version}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>mysql</artifactId>
+      <version>${testcontainers.version}</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -113,6 +157,19 @@
               <outputDirectory>target/generated-sources/java</outputDirectory>
               <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
             </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
           </execution>
         </executions>
       </plugin>
@@ -142,8 +199,8 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
-
     </plugins>
+    
   </build>
 
 </project>
