--- a/server/dev/docker-compose.base.yml
+++ b/server/dev/docker-compose.base.yml
@@ -39,7 +39,7 @@ services:
   server:
     build:
       context: ../
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     env_file: ./fleashop.env
     environment:
       - JAVA_OPTS=-Djava.compiler=NONE -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=0.0.0.0:8888 -Xnoagent
