--- a/server/Jenkinsfile
+++ b/server/Jenkinsfile
@@ -1,9 +1,5 @@
 pipeline {
-    agent { 
-        node {
-            customWorkspace '/server'
-        }
-    }
+    agent any
     stages {
         stage('Unit Test') {
             steps {
