--- a/server/Jenkinsfile
+++ b/server/Jenkinsfile
@@ -3,17 +3,17 @@ pipeline {
     stages {
         stage('Unit Test') {
             steps {
-                sh './mvnw test'
+                sh 'cd server && ./mvnw test'
             }
         }
         stage('Verify') {
             steps {
-                sh './mvnw -B clean verify'
+                sh 'cd server && ./mvnw -B clean verify'
             }
         }
         stage('Build Image') {
             steps {
-                sh "docker build -t engineer365/fleashop:${env.BUILD_ID} ."
+                sh "cd server && docker build -t engineer365/fleashop:${env.BUILD_ID} ."
             }
         }
     }
