--- a/infra/virtualbox/base/store/Vagrantfile
+++ b/infra/virtualbox/base/store/Vagrantfile
@@ -1,21 +1,21 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
-# 
+#
 #  MIT License
-# 
+#
 #  Copyright (c) 2020 engineer365.org
-# 
+#
 #  Permission is hereby granted, free of charge, to any person obtaining a copy
 #  of this software and associated documentation files (the "Software"), to deal
 #  in the Software without restriction, including without limitation the rights
 #  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 #  copies of the Software, and to permit persons to whom the Software is
 #  furnished to do so, subject to the following conditions:
-# 
+#
 #  The above copyright notice and this permission notice shall be included in all
 #  copies or substantial portions of the Software.
-# 
+#
 #  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 #  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 #  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -39,23 +39,23 @@ puts "base box: #{base_box_name_fq}"
 
 puts "Vagrantfile variables ---------------------------------------------------"
 
-
-$provision_script = <<-'PROVISION_SCRIPT'
-  docker --quiet pull mysql:8.0.22
-PROVISION_SCRIPT
-
-
-
 Vagrant.configure("2") do |config|
 
   config.vm.box = base_box_name_fq
   config.disksize.size = '200GB'
-  
+
   config.vm.provider "virtualbox" do |p|
     p.name = vm_name_fq
     p.linked_clone = true
   end
-  
-  config.vm.provision "shell", inline: $provision_script
+
+  config.vm.provision "file", source: "./provision.sh", destination: "/home/vagrant/"
+
+  # Enable provisioning with a shell script.
+  config.vm.provision "shell" do |s|
+    s.path = "launch.sh"
+    s.args = ""
+  end
+
 
 end
