--- a/infra/virtualbox/builder1/Vagrantfile
+++ b/infra/virtualbox/builder1/Vagrantfile
@@ -32,9 +32,9 @@ puts "org: #{org}"
 vm_name=ENV["builder1_host"]
 puts "vm name: #{vm_name}"
 
-base_box_name=ENV["box_name____org_builder"]
-base_box_name_fq="#{org}/#{base_box_name}"
-puts "base box: #{base_box_name_fq}"
+box_name=ENV["box_name____org_builder1"]
+box_name_fq="#{org}/#{box_name}"
+puts "base box: #{box_name_fq}"
 
 ip=ENV["builder1_ip"]
 puts "ip: #{ip}"
@@ -44,27 +44,11 @@ puts "Vagrantfile variables ---------------------------------------------------"
 
 Vagrant.configure("2") do |config|
 
-  config.vm.box = base_box_name_fq
-  config.vm.hostname = vm_name
+  config.vm.box = box_name_fq
   config.vm.network "private_network", ip: ip
-  # config.vm.synced_folder "./data", "/data", create: true
-
+  
   config.vm.provider "virtualbox" do |p|
      p.name = vm_name
-     p.linked_clone = true
-  end
-
-  #config.vm.provision "shell", inline: "sudo chown -R vagrant:vagrant /opt"
-  config.vm.provision "file", source: "./home/vagrant/.m2", destination: "/home/vagrant/.m2"
-  config.vm.provision "file", source: "./home/vagrant/jenkins-tool", destination: "/home/vagrant/jenkins-tool"
-  config.vm.provision "file", source: "./home/vagrant/post-install", destination: "/home/vagrant/post-install"
-
-  config.vm.provision "file", source: "./provision.sh", destination: "/home/vagrant/"
-
-  # Enable provisioning with a shell script.
-  config.vm.provision "shell" do |s|
-    s.path = "launch.sh"
-    s.args = ""
   end
 
 end
