--- a/infra/virtualbox/store1/Vagrantfile
+++ b/infra/virtualbox/store1/Vagrantfile
@@ -1,21 +1,21 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
-# 
+#
 #  MIT License
-# 
+#
 #  Copyright (c) 2020 engineer365.org
-# 
+#
 #  Permission is hereby granted, free of charge, to any person obtaining a copy
 #  of this software and associated documentation files (the "Software"), to deal
 #  in the Software without restriction, including without limitation the rights
 #  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 #  copies of the Software, and to permit persons to whom the Software is
 #  furnished to do so, subject to the following conditions:
-# 
+#
 #  The above copyright notice and this permission notice shall be included in all
 #  copies or substantial portions of the Software.
-# 
+#
 #  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 #  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 #  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -32,9 +32,9 @@ puts "org: #{org}"
 vm_name=ENV["store1_host"]
 puts "vm name: #{vm_name}"
 
-base_box_name=ENV["box_name____org_store"]
-base_box_name_fq="#{org}/#{base_box_name}"
-puts "base box: #{base_box_name_fq}"
+box_name=ENV["box_name____org_store1"]
+box_name_fq="#{org}/#{box_name}"
+puts "base box: #{box_name_fq}"
 
 ip=ENV["store1_ip"]
 puts "ip: #{ip}"
@@ -44,20 +44,11 @@ puts "Vagrantfile variables ---------------------------------------------------"
 
 Vagrant.configure("2") do |config|
 
-  config.vm.box = base_box_name_fq
-  config.vm.hostname = vm_name
+  config.vm.box = box_name_fq
   config.vm.network "private_network", ip: ip
-  # config.vm.synced_folder "./data", "/data", create: true
   
   config.vm.provider "virtualbox" do |p|
      p.name = vm_name
-     p.linked_clone = true
   end
 
-  config.vm.provision "file", source: "./opt", destination: "/opt"
-
-  config.vm.provision "shell" do |s|
-    s.path = "provision.sh"
-    s.args = ""
-  end
 end
