--- a/infra/virtualbox/boxes/builder1/Vagrantfile
+++ b/infra/virtualbox/boxes/builder1/Vagrantfile
@@ -54,11 +54,11 @@ Vagrant.configure("2") do |config|
      p.linked_clone = false
   end
 
-  config.vm.provision "file", source: "./post-install", destination: "/home/vagrant/"
-  config.vm.provision "shell", inline: "mv /home/vagrant/post-install /"
-  
-  config.vm.provision "file", source: "./root/jenkins-tool", destination: "/home/vagrant/"
-  config.vm.provision "shell", inline: "mv /home/vagrant/jenkins-tool /root/"
+  config.vm.provision "file", source: "./files", destination: "/home/vagrant/"
+  #config.vm.provision "shell", inline: "mv /home/vagrant/post-install /"
+
+  #config.vm.provision "file", source: "./pre-install/root/jenkins-tool", destination: "/home/vagrant/"
+  #config.vm.provision "shell", inline: "mv /home/vagrant/jenkins-tool /root/"
 
   # Enable provisioning with a shell script.
   config.vm.provision "shell" do |s|
