--- a/infra/virtualbox/boxes/store4/Vagrantfile
+++ b/infra/virtualbox/boxes/store4/Vagrantfile
@@ -54,9 +54,9 @@ Vagrant.configure("2") do |config|
      p.linked_clone = false
   end
 
-  config.vm.provision "file", source: "./post-install", destination: "/home/vagrant/"
-  config.vm.provision "shell", inline: "mv /home/vagrant/post-install /"
-  
+  config.vm.provision "file", source: "./files", destination: "/home/vagrant/"
+  #config.vm.provision "shell", inline: "mv /home/vagrant/post-install /"
+
   # Enable provisioning with a shell script.
   config.vm.provision "shell" do |s|
     s.path = "provision.sh"
