move k8s as git submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "fleashop-fronter"]
 	path = fleashop-fronter
 	url = https://github.com/engineer-365/fleashop-fronter.git
+[submodule "fleashop-server-k8s"]
+	path = fleashop-server-k8s
+	url = https://github.com/engineer-365/fleashop-server-k8s.git
